Updates to site name and https config

--- a/index.html
+++ b/index.html
@@ -489,6 +489,9 @@
 	<script src="common-js/jquery.fluidbox.min.js"></script>
 	
 	<script src="common-js/scripts.js"></script>
+
+	<!--W3 Website Traffic Tracker-->
+	<script src="https://www.w3counter.com/tracker.js?id=119048"></script>
 	
 </body>
 </html>
