Updated portfolio with site name

--- a/index.html
+++ b/index.html
@@ -31,46 +31,10 @@
 <body>
 	
 	<header>
-		<!--<div class="container">-->
-			<!--<div class="heading-wrapper">-->
-				<!--<div class="row">-->
-					<!--<div class="col-sm-6 col-md-6 col-lg-4">-->
-						<!--<div class="info">-->
-							<!--<i class="icon ion-ios-location-outline"></i>-->
-							<!--<div class="right-area">-->
-								<!--<h5>Waterloo, ON</h5>-->
-								<!--<h5>Canada</h5>-->
-							<!--</div>&lt;!&ndash; right-area &ndash;&gt;-->
-						<!--</div>&lt;!&ndash; info &ndash;&gt;-->
-					<!--</div>&lt;!&ndash; col-sm-4 &ndash;&gt;-->
-					<!---->
-					<!--<div class="col-sm-6 col-md-6 col-lg-4">-->
-						<!--<div class="info">-->
-							<!--<i class="icon ion-ios-telephone-outline"></i>-->
-							<!--<div class="right-area">-->
-								<!--<h5>337-4139538</h5>-->
-								<!--<h6>MIN - FRI,8AM - 7PM</h6>-->
-							<!--</div>&lt;!&ndash; right-area &ndash;&gt;-->
-						<!--</div>&lt;!&ndash; info &ndash;&gt;-->
-					<!--</div>&lt;!&ndash; col-sm-4 &ndash;&gt;-->
-					<!---->
-					<!--<div class="col-sm-6 col-md-6 col-lg-4">-->
-						<!--<div class="info">-->
-							<!--<i class="icon ion-ios-chatboxes-outline"></i>-->
-							<!--<div class="right-area">-->
-								<!--<h5>contact@colorlib.com</h5>-->
-								<!--<h6>REPLY IN 24 HOURS</h6>-->
-							<!--</div>&lt;!&ndash; right-area &ndash;&gt;-->
-						<!--</div>&lt;!&ndash; info &ndash;&gt;-->
-					<!--</div>&lt;!&ndash; col-sm-4 &ndash;&gt;-->
-				<!--</div>&lt;!&ndash; row &ndash;&gt;-->
-			<!--</div>&lt;!&ndash; heading-wrapper &ndash;&gt;-->
-			<!---->
-			<!--<a class="downlad-btn" href="#">Download Resume</a>-->
-		<!--</div>&lt;!&ndash; container &ndash;&gt;-->
+
 	</header>
 	
-	<section class="intro-section">
+	<section id="intro" class="intro-section">
 		<div class="container">
 			<div class="row">
 				<div class="col-md-1 col-lg-2"></div>
@@ -114,7 +78,7 @@
 		</div><!-- container -->
 	</section><!-- intro-section -->
 
-	<section class="about-section section">
+	<section id="about" class="about-section section">
 		<div class="container">
 			<div class="row">
 				<div class="col-sm-4">
@@ -175,7 +139,7 @@
 		</div><!-- container -->
 	</section><!-- about-section -->
 
-    <section class="qualifications-section section" id="counter">
+    <section id="qualifications" class="qualifications-section section">
         <div class="container">
             <div class="row">
                 <div class="col-sm-12">
@@ -209,7 +173,7 @@
                         <ul class="list">
                             <li>Versed at 3D modeling with Solidworks</li>
                             <li>Drafting and dimensioning using AutoCAD</li>
-                            <li>Rapid prototyping and design< using 3D printers and laser cutters</li>
+                            <li>Rapid prototyping and design using 3D printers and laser cutters</li>
                             <li>Geometric Dimensioning and Tolerancing knowledge through coursework</li>
                             <li>Relevant Courses: Engineering Graphics and Design, and Statics</li>
                         </ul>
@@ -221,7 +185,7 @@
                         <div class="offset-1 margin-b-30">
                             <i class="fa fa-handshake fa-4x"></i>
                         </div>
-                        <h5 class="margin-tb-20 font-yellow"><b>ACCOMPLISHMENT</b></h5>
+                        <h5 class="margin-tb-20 font-yellow"><b>ACCOMPLISHMENTS</b></h5>
                         <ul class="list">
                             <li>Google's Best Android Things prize at PennApps 2017</li>
                             <li>3rd place at IEEE Hardware Hackathon</li>
@@ -238,7 +202,7 @@
         </div><!-- container -->
     </section><!-- qualifications-section -->
 
-	<!--<section class="portfolio-section section">-->
+	<!--<section id="portfolio" class="portfolio-section section">-->
 		<!--<div class="container">-->
 			<!--<div class="row">-->
 				<!--<div class="col-sm-4">-->
@@ -313,7 +277,7 @@
 
 	<!--</section>&lt;!&ndash; portfolio-section &ndash;&gt;-->
 	
-	<section class="experience-section section">
+	<section id="experience" class="experience-section section">
 		<div class="container">
 			<div class="row">
 				<div class="col-sm-4">
@@ -371,7 +335,7 @@
 		
 	</section><!-- experience-section -->
 	
-	<section class="education-section section">
+	<section id="projects" class="project-section section">
 		<div class="container">
 			<div class="row">
 				<div class="col-sm-4">
@@ -381,8 +345,8 @@
 					</div>
 				</div><!-- col-sm-4 -->
 				<div class="col-sm-8">
-					<div class="education-wrapper">
-						<div class="education margin-b-50">
+					<div class="project-wrapper">
+						<div class="project margin-b-50">
                             <a href="https://devpost.com/software/study-space" target="_blank">
                                 <h4><b>STUDY SPACE</b></h4>
                                 <h5 class="font-yellow"><b>PENNAPPS (GOOGLE'S BEST ANDROID THINGS PRIZE)</b></h5>
@@ -393,9 +357,9 @@
                                 <li>Automated core data processing using Selenium and Java, resulting in 60% increased efficiency in chassis inventory management</li>
                                 <li>Iterated on internal quoting tools using Chart.js to improve ease of use and allow for better visualization of company performance</li>
                             </ul>
-						</div><!-- education -->
+						</div><!-- project -->
 						
-						<div class="education margin-b-50">
+						<div class="project margin-b-50">
                             <a href="https://www.youtube.com/watch?v=cB54IVEBsJM&feature=youtu.be" target="_blank">
                                 <h4><b>SMART GLOVE</b></h4>
                                 <h5 class="font-yellow"><b>IEEE HARDWARE HACKATHON (3RD PLACE)</b></h5>
@@ -406,9 +370,9 @@
                                 <li>Implemented gesture recognition by combining data from capacitive force sensors and 3-axis gyroscope/accelerometers</li>
                                 <li>Controlled devices such as lights and speakers by sending commands through TCP local WiFi socket using two Arduino Nanos</li>
                             </ul>
-                        </div><!-- education -->
+                        </div><!-- project -->
 
-                        <div class="education margin-b-50">
+                        <div class="project margin-b-50">
                             <h4><b>DOG WHEELCHAIR LIFT</b></h4>
                             <h5 class="font-yellow"><b>ROBOTICS PROJECT</b></h5>
                             <h6 class="font-lite-black margin-t-10">C++, RobotC, AutoCAD (Oct - Dec 2016)</h6>
@@ -416,14 +380,14 @@
                                 <li>Constructed wheelchair lift to allow handicapped dogs to scale obstacles with heights up to 20cm</li>
                                 <li>Implemented automatic deployment/stoppage of lift sequences by detecting obstacles using gyroscope and ultrasonic sensors</li>
                             </ul>
-                        </div><!-- education -->
+                        </div><!-- project -->
 
-					</div><!-- education-wrapper -->
+					</div><!-- project-wrapper -->
 				</div><!-- col-sm-8 -->
 			</div><!-- row -->
 		</div><!-- container -->
 		
-	</section><!-- about-section -->
+	</section><!-- project-section -->
 
 	
 	<!--<section class="counter-section" id="counter">-->
