Minor UI updates

--- a/index.html
+++ b/index.html
@@ -17,18 +17,18 @@
 	
 	<!-- Stylesheets -->
 	
-	<link href="common-css/bootstrap.css" rel="stylesheet">
+	<link href="css/bootstrap.css" rel="stylesheet">
 	
-	<link href="common-css/ionicons.css" rel="stylesheet">
+	<link href="css/ionicons.css" rel="stylesheet">
 	
-	<link href="common-css/fluidbox.min.css" rel="stylesheet">
+	<link href="css/fluidbox.min.css" rel="stylesheet">
 	
-	<link href="01-cv-portfolio/css/styles.css" rel="stylesheet">
+	<link href="css/styles.css" rel="stylesheet">
 	
-	<link href="01-cv-portfolio/css/responsive.css" rel="stylesheet">
+	<link href="css/responsive.css" rel="stylesheet">
 
     <!-- Favicon Image -->
-    
+
     <link rel="apple-touch-icon" sizes="180x180" href="favicon/apple-touch-icon.png">
     <link rel="icon" type="image/png" href="favicon/favicon-32x32.png" sizes="32x32">
     <link rel="icon" type="image/png" href="favicon/favicon-16x16.png" sizes="16x16">
@@ -233,80 +233,80 @@
         </div><!-- container -->
     </section><!-- qualifications-section -->
 
-	<!--<section id="portfolio" class="portfolio-section section">-->
-		<!--<div class="container">-->
-			<!--<div class="row">-->
-				<!--<div class="col-sm-4">-->
-					<!--<div class="heading">-->
-						<!--<h3><b>Portfolio</b></h3>-->
-						<!--<h6 class="font-lite-black"><b>MY WORK</b></h6>-->
-					<!--</div>-->
-				<!--</div>&lt;!&ndash; col-sm-4 &ndash;&gt;-->
-				<!--<div class="col-sm-8">-->
-					<!--<div class="portfolioFilter clearfix margin-b-80">-->
-						<!--<a href="#" data-filter="*" class="current"><b>ALL</b></a>-->
-						<!--<a href="#" data-filter=".web-design"><b>WEB DESIGN</b></a>-->
-						<!--<a href="#" data-filter=".branding"><b>BRANDING</b></a>-->
-						<!--<a href="#" data-filter=".graphic-design"><b>GRAPHIC DESIGN</b></a>-->
-					<!--</div>&lt;!&ndash; portfolioFilter &ndash;&gt;-->
-				<!--</div>&lt;!&ndash; col-sm-8 &ndash;&gt;-->
-			<!--</div>&lt;!&ndash; row &ndash;&gt;-->
-		<!--</div>&lt;!&ndash; container &ndash;&gt;-->
+	<!--<section id="portfolio" class="portfolio-section section">
+		<div class="container">
+			<div class="row">
+				<div class="col-sm-4">
+					<div class="heading">
+						<h3><b>Portfolio</b></h3>
+						<h6 class="font-lite-black"><b>MY WORK</b></h6>
+					</div>
+				</div>&lt;!&ndash; col-sm-4 &ndash;&gt;
+				<div class="col-sm-8">
+					<div class="portfolioFilter clearfix margin-b-80">
+						<a href="#" data-filter="*" class="current"><b>ALL</b></a>
+						<a href="#" data-filter=".web-design"><b>WEB DESIGN</b></a>
+						<a href="#" data-filter=".branding"><b>BRANDING</b></a>
+						<a href="#" data-filter=".graphic-design"><b>GRAPHIC DESIGN</b></a>
+					</div>&lt;!&ndash; portfolioFilter &ndash;&gt;
+				</div>&lt;!&ndash; col-sm-8 &ndash;&gt;
+			</div>&lt;!&ndash; row &ndash;&gt;
+		</div>&lt;!&ndash; container &ndash;&gt;
 
-		<!--<div class="portfolioContainer">-->
+		<div class="portfolioContainer">
 
-			<!--<div class="p-item web-design">-->
-				<!--<a href="images/portfolio-1-600x400.jpg" data-fluidbox>-->
-					<!--<img src="images/portfolio-1-600x400.jpg" alt=""></a>-->
-			<!--</div>&lt;!&ndash; p-item &ndash;&gt;-->
+			<div class="p-item web-design">
+				<a href="images/portfolio-1-600x400.jpg" data-fluidbox>
+					<img src="images/portfolio-1-600x400.jpg" alt=""></a>
+			</div>&lt;!&ndash; p-item &ndash;&gt;
 
-			<!--<div class="p-item branding graphic-design">-->
-				<!--<a href="images/portfolio-7-600x800.jpg" data-fluidbox>-->
-					<!--<img src="images/portfolio-7-600x800.jpg" alt=""></a>-->
-			<!--</div>&lt;!&ndash; p-item &ndash;&gt;-->
+			<div class="p-item branding graphic-design">
+				<a href="images/portfolio-7-600x800.jpg" data-fluidbox>
+					<img src="images/portfolio-7-600x800.jpg" alt=""></a>
+			</div>&lt;!&ndash; p-item &ndash;&gt;
 
-			<!--<div class="p-item web-design">-->
-				<!--<a href="images/portfolio-2-600x400.jpg" data-fluidbox>-->
-					<!--<img src="images/portfolio-2-600x400.jpg" alt=""></a>-->
-			<!--</div>&lt;!&ndash; p-item &ndash;&gt;-->
+			<div class="p-item web-design">
+				<a href="images/portfolio-2-600x400.jpg" data-fluidbox>
+					<img src="images/portfolio-2-600x400.jpg" alt=""></a>
+			</div>&lt;!&ndash; p-item &ndash;&gt;
 
-			<!--<div class="p-item p-item-2 graphic-design">-->
-				<!--<a class="img" href="images/portfolio-8-300x400.jpg" data-fluidbox>-->
-					<!--<img src="images/portfolio-8-300x400.jpg" alt=""></a>-->
-				<!--<a class="img" href="images/portfolio-9-300x400.jpg" data-fluidbox>-->
-					<!--<img src="images/portfolio-9-300x400.jpg" alt=""></a>-->
-			<!--</div>&lt;!&ndash; p-item &ndash;&gt;-->
+			<div class="p-item p-item-2 graphic-design">
+				<a class="img" href="images/portfolio-8-300x400.jpg" data-fluidbox>
+					<img src="images/portfolio-8-300x400.jpg" alt=""></a>
+				<a class="img" href="images/portfolio-9-300x400.jpg" data-fluidbox>
+					<img src="images/portfolio-9-300x400.jpg" alt=""></a>
+			</div>&lt;!&ndash; p-item &ndash;&gt;
 
-			<!--<div class="p-item branding graphic-design">-->
-				<!--<a href="images/portfolio-3-600x400.jpg" data-fluidbox>-->
-					<!--<img src="images/portfolio-3-600x400.jpg" alt=""></a>-->
-			<!--</div>&lt;!&ndash; p-item &ndash;&gt;-->
+			<div class="p-item branding graphic-design">
+				<a href="images/portfolio-3-600x400.jpg" data-fluidbox>
+					<img src="images/portfolio-3-600x400.jpg" alt=""></a>
+			</div>&lt;!&ndash; p-item &ndash;&gt;
 
-			<!--<div class="p-item graphic-design web-design">-->
-				<!--<a href="images/portfolio-4-600x400.jpg" data-fluidbox>-->
-					<!--<img src="images/portfolio-4-600x400.jpg" alt=""></a>-->
-			<!--</div>&lt;!&ndash; p-item &ndash;&gt;-->
+			<div class="p-item graphic-design web-design">
+				<a href="images/portfolio-4-600x400.jpg" data-fluidbox>
+					<img src="images/portfolio-4-600x400.jpg" alt=""></a>
+			</div>&lt;!&ndash; p-item &ndash;&gt;
 
-			<!--<div class="p-item  graphic-design branding">-->
-				<!--<a href="images/portfolio-5-600x800.jpg" data-fluidbox>-->
-					<!--<img src="images/portfolio-5-600x800.jpg" alt=""></a>-->
-			<!--</div>&lt;!&ndash; p-item &ndash;&gt;-->
+			<div class="p-item  graphic-design branding">
+				<a href="images/portfolio-5-600x800.jpg" data-fluidbox>
+					<img src="images/portfolio-5-600x800.jpg" alt=""></a>
+			</div>&lt;!&ndash; p-item &ndash;&gt;
 
-			<!--<div class="p-item web-design branding">-->
-				<!--<a href="images/portfolio-6-600x800.jpg" data-fluidbox>-->
-					<!--<img src="images/portfolio-6-600x800.jpg" alt=""></a>-->
-			<!--</div>&lt;!&ndash; p-item &ndash;&gt;-->
+			<div class="p-item web-design branding">
+				<a href="images/portfolio-6-600x800.jpg" data-fluidbox>
+					<img src="images/portfolio-6-600x800.jpg" alt=""></a>
+			</div>&lt;!&ndash; p-item &ndash;&gt;
 
-			<!--<div class="p-item p-item-2 graphic-design">-->
-				<!--<a class="img" href="images/portfolio-10-300x400.jpg" data-fluidbox>-->
-					<!--<img src="images/portfolio-10-300x400.jpg" alt=""></a>-->
-				<!--<a class="img" href="images/portfolio-11-300x400.jpg" data-fluidbox>-->
-					<!--<img src="images/portfolio-11-300x400.jpg" alt=""></a>-->
-			<!--</div>&lt;!&ndash; p-item &ndash;&gt;-->
+			<div class="p-item p-item-2 graphic-design">
+				<a class="img" href="images/portfolio-10-300x400.jpg" data-fluidbox>
+					<img src="images/portfolio-10-300x400.jpg" alt=""></a>
+				<a class="img" href="images/portfolio-11-300x400.jpg" data-fluidbox>
+					<img src="images/portfolio-11-300x400.jpg" alt=""></a>
+			</div>&lt;!&ndash; p-item &ndash;&gt;
 
-		<!--</div>&lt;!&ndash; portfolioContainer &ndash;&gt;-->
+		</div>&lt;!&ndash; portfolioContainer &ndash;&gt;
 
-	<!--</section>&lt;!&ndash; portfolio-section &ndash;&gt;-->
+	</section>&lt;!&ndash; portfolio-section &ndash;&gt;-->
 	
 	<section id="experience" class="experience-section section">
 		<div class="container">
@@ -387,7 +387,7 @@
                                 <h4><b>STUDY SPACE</b></h4>
                                 <h5 class="font-yellow"><b>PENNAPPS (GOOGLE'S BEST ANDROID THINGS PRIZE)</b></h5>
                             </a>
-							<h6 class="font-lite-black margin-t-10">Android Things, Java, Firebase, NXP Microcontroller (SEP 2017)</h6>
+							<h6 class="margin-t-10">Android Things, Java, Firebase, NXP Microcontroller (SEP 2017)</h6>
                             <ul class="list margin-tb-30">
                                 <li>Expanded company’s business-facing website using LAMP stack, Laravel, and Vue.js used by over 1000 employees</li>
                                 <li>Automated core data processing using Selenium and Java, resulting in 60% increased efficiency in chassis inventory management</li>
@@ -400,7 +400,7 @@
                                 <h4><b>SMART GLOVE</b></h4>
                                 <h5 class="font-yellow"><b>IEEE HARDWARE HACKATHON (3RD PLACE)</b></h5>
                             </a>
-							<h6 class="font-lite-black margin-t-10">Arduino, C, Gyro/Accselerometer (Feb 2017)</h6>
+							<h6 class="margin-t-10">Arduino, C, Gyro/Accselerometer (Feb 2017)</h6>
                             <ul class="list margin-tb-30">
                                 <li>Designed glove to wirelessly control IoT devices using simple gestures</li>
                                 <li>Implemented gesture recognition by combining data from capacitive force sensors and 3-axis gyroscope/accelerometers</li>
@@ -411,7 +411,7 @@
                         <div class="project margin-b-50">
                             <h4><b>DOG WHEELCHAIR LIFT</b></h4>
                             <h5 class="font-yellow"><b>ROBOTICS PROJECT</b></h5>
-                            <h6 class="font-lite-black margin-t-10">C++, RobotC, AutoCAD (Oct - Dec 2016)</h6>
+                            <h6 class="margin-t-10">C++, RobotC, AutoCAD (Oct - Dec 2016)</h6>
                             <ul class="list margin-tb-30">
                                 <li>Constructed wheelchair lift to allow handicapped dogs to scale obstacles with heights up to 20cm</li>
                                 <li>Implemented automatic deployment/stoppage of lift sequences by detecting obstacles using gyroscope and ultrasonic sensors</li>
