--- a/04-elements.html
+++ b/04-elements.html
@@ -13,11 +13,11 @@
 	
 	<!-- Stylesheets -->
 	
-	<link href="common-css/bootstrap.css" rel="stylesheet">
+	<link href="css/bootstrap.css" rel="stylesheet">
 	
-	<link href="common-css/ionicons.css" rel="stylesheet">
+	<link href="css/ionicons.css" rel="stylesheet">
 	
-	<link href="common-css/fluidbox.min.css" rel="stylesheet">
+	<link href="css/fluidbox.min.css" rel="stylesheet">
 	
 	<link href="04-elements/css/styles.css" rel="stylesheet">
 	
