Updated PennApps description

--- a/index.html
+++ b/index.html
@@ -385,20 +385,19 @@
 						<div class="project margin-b-50">
                             <a href="https://devpost.com/software/study-space" target="_blank">
                                 <h4><b>STUDY SPACE</b></h4>
-                                <h5 class="font-yellow"><b>PENNAPPS (GOOGLE'S BEST ANDROID THINGS PRIZE)</b></h5>
+                                <h5 class="font-yellow"><b>PENNAPPS (GOOGLE PRIZE WINNER)</b></h5>
                             </a>
 							<h6 class="margin-t-10">Android Things, Java, Firebase, NXP Microcontroller (SEP 2017)</h6>
                             <ul class="list margin-tb-30">
-                                <li>Expanded company’s business-facing website using LAMP stack, Laravel, and Vue.js used by over 1000 employees</li>
-                                <li>Automated core data processing using Selenium and Java, resulting in 60% increased efficiency in chassis inventory management</li>
-                                <li>Iterated on internal quoting tools using Chart.js to improve ease of use and allow for better visualization of company performance</li>
+                                <li>Created IoT device along with companion app to display the number of people in specific locations on campus</li>
+                                <li>Determined the occupancy of areas using ‘Android Nearby’ to discover number of wireless devices within range</li>
                             </ul>
 						</div><!-- project -->
 						
 						<div class="project margin-b-50">
                             <a href="https://www.youtube.com/watch?v=cB54IVEBsJM&feature=youtu.be" target="_blank">
                                 <h4><b>SMART GLOVE</b></h4>
-                                <h5 class="font-yellow"><b>IEEE HARDWARE HACKATHON (3RD PLACE)</b></h5>
+                                <h5 class="font-yellow"><b>IEEE HARDWARE HACKATHON (3RD PLACE WINNER)</b></h5>
                             </a>
 							<h6 class="margin-t-10">Arduino, C, Gyro/Accselerometer (Feb 2017)</h6>
                             <ul class="list margin-tb-30">
