--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
                                 </a>
                             </li>
                             <li><b>CO-OP : </b>Software Engineer Intern @
-                                <a href="https://www.microsoft.com/en-ca/windows/windows-mixed-reality" target="_blank">
+                                <a href="https://www.microsoft.com/" target="_blank">
                                     Microsoft
                                 </a>
                             </li>
