Updated About Me Section

--- a/index.html
+++ b/index.html
@@ -125,7 +125,7 @@
 						team player with an aptitude for <strong>technology</strong>, an intuition
 						for solving <strong>challenging problems</strong>, and a strong track record in
 						people <strong>leadership</strong>. I am currently looking for a 4 month co-op
-						during Fall 2018 so feel free to reach out to me if you want me on your team!</p>
+						during Summer 2019 so feel free to reach out to me if you want me on your team!</p>
 
 					<!--<div class="row">-->
 						<!--<div class="col-sm-6 col-md-6 col-lg-3">-->
