Updated experience and projects

--- a/index.html
+++ b/index.html
@@ -321,11 +321,39 @@
 					<div class="experience-wrapper">
 
 						<div class="experience margin-b-50">
+                            <a href="https://visualstudio.microsoft.com/team-services/" target="_blank">
+                                <h4><b>SOFTWARE ENGINEER INTERN</b></h4>
+                                <h5 class="font-yellow"><b>MICROSOFT CORPORATION</b></h5>
+                            </a>
+							<h6 class="margin-t-10">C#, Go, Redis, Azure &nbsp;|&nbsp; Redmond, WA &nbsp;|&nbsp;  Aug 2018 - Present</h6>
+							<ul class="list margin-tb-30">
+								<li>Currently working on the Azure DevOps team to add caching and improve ownership enforcement features within Visual Studio Team Services</li>
+							</ul>
+						</div><!-- experience -->
+
+						<div class="experience margin-b-50">
+                            <!--<div class="logo">-->
+                                <!--<img src="images/microsoft-logo.png">-->
+                            <!--</div>-->
+
+                            <a href="http://watonomous.ca/" target="_blank">
+                                <h4><b>PATH PLANNING ENGINEER</b></h4>
+                                <h5 class="font-yellow"><b>WATONOMOUS DESIGN TEAM (SELF-DRIVING CAR)</b></h5>
+                            </a>
+							<h6 class="margin-t-10">OpenCV, ROS, Rviz, LiDAR, Radar &nbsp;|&nbsp; Waterloo, ON &nbsp;|&nbsp; Sep 2017 - Aug 2018</h6>
+							<ul class="list margin-tb-30">
+								<li>Worked within Sensor Fusion subteam to transform a Chevrolet Bolt EV into a level 4 autonomous vehicle for the SAE AutoDrive Challenge</li>
+								<li>Implemented path visualization algorithms using ROS and Rviz to display the path of the car generated using a trajectory rollout approach</li>								
+								<li>Implemented sensor fusion algorithms to combine raw camera and Lidar data to obtain better representation of car’s surroundings</li>
+							</ul>
+						</div><!-- experience -->
+
+						<div class="experience margin-b-50">
                             <a href="https://www.microsoft.com/en-us/mixed-reality" target="_blank">
                                 <h4><b>SOFTWARE ENGINEER INTERN</b></h4>
                                 <h5 class="font-yellow"><b>MICROSOFT CORPORATION</b></h5>
                             </a>
-							<h6 class="margin-t-10">C#, C++, C++/CX, XAML, Unity, HoloLens (Jan - Apr 2018)</h6>
+							<h6 class="margin-t-10">C#, C++, C++/CX, XAML, Unity, HoloLens &nbsp;|&nbsp; Vancouver, BC &nbsp;|&nbsp; Jan - Apr 2018</h6>
 							<ul class="list margin-tb-30">
 								<li>Worked on Mixed Reality Viewer team to create a default Windows and HoloLens app for viewing 3D content with over 3 million monthly users</li>
 								<li>Integrated 3D asset conversion and optimization pipeline to support all 3D file formats and ensured it adhered to the MVVM design pattern</li>
@@ -334,29 +362,11 @@
 						</div><!-- experience -->
 
 						<div class="experience margin-b-50">
-
-                            <!--<div class="logo">-->
-                                <!--<img src="images/microsoft-logo.png">-->
-                            <!--</div>-->
-
-                            <a href="http://watonomous.ca/" target="_blank">
-                                <h4><b>SENSOR FUSION SOFTWARE ENGINEER</b></h4>
-                                <h5 class="font-yellow"><b>WATONOMOUS DESIGN TEAM (SELF-DRIVING CAR)</b></h5>
-                            </a>
-							<h6 class="margin-t-10">OpenCV, ROS, Rviz, LiDAR, Radar (Sep - Dec 2017)</h6>
-							<ul class="list margin-tb-30">
-								<li>Worked within Sensor Fusion subteam to transform a Chevrolet Bolt EV into a level 4 autonomous vehicle for the SAE AutoDrive Challenge</li>
-								<li>Implemented sensor fusion algorithms to combine raw camera and Lidar data to obtain better representation of car’s surroundings</li>
-								<li>Researched sensor calibration algorithms for an ARS30 radar</li>
-							</ul>
-						</div><!-- experience -->
-
-						<div class="experience margin-b-50">
                             <a href="https://www.unicell.com/" target="_blank">
                                 <h4><b>FULL-STACK DEVELOPER</b></h4>
                                 <h5 class="font-yellow"><b>UNICELL BODY COMPANY</b></h5>
                             </a>
-							<h6 class="margin-t-10">Java, MySQL, Laravel, Vue.js, React Native (May - Aug 2016)</h6>
+							<h6 class="margin-t-10">Java, MySQL, Laravel, Vue.js, React Native &nbsp;|&nbsp; Toronto, ON &nbsp;|&nbsp; May - Aug 2016</h6>
 							<ul class="list margin-tb-30">
 								<li>Expanded company’s business-facing website using LAMP stack, Laravel, and Vue.js used by over 1000 employees</li>
 								<li>Automated core data processing using Selenium and Java, resulting in 60% increased efficiency in chassis inventory management</li>
@@ -382,12 +392,25 @@
 				</div><!-- col-sm-4 -->
 				<div class="col-sm-8">
 					<div class="project-wrapper">
+						
+						<div class="project margin-b-50">
+                            <a href="https://github.com/Nayef211/FlappyGoose" target="_blank">
+                                <h4><b>Flappy Goose</b></h4>
+                                <h5 class="font-yellow"><b>RTOS Game in an Embedded Environment</b></h5>
+                            </a>
+							<h6 class="margin-t-10">C, Keil RTX RTOS, LPC1768 Microcontroller &nbsp;|&nbsp; Jun - Jul 2018</h6>
+                            <ul class="list margin-tb-30">
+                                <li>Recreated the Flappy Bird game using Keil MCB1700 board in a real-time OS</li>
+                                <li>Used task synchronization and interrupts to update LCD graphics, player score, game physics, and handle peripheral I/O simultaneously</li>
+                            </ul>
+						</div><!-- project -->
+
 						<div class="project margin-b-50">
                             <a href="https://devpost.com/software/study-space" target="_blank">
                                 <h4><b>STUDY SPACE</b></h4>
                                 <h5 class="font-yellow"><b>PENNAPPS (GOOGLE PRIZE WINNER)</b></h5>
                             </a>
-							<h6 class="margin-t-10">Android Things, Java, Firebase, NXP Microcontroller (SEP 2017)</h6>
+							<h6 class="margin-t-10">Android Things, Java, Firebase, NXP Microcontroller &nbsp;|&nbsp; SEP 2017</h6>
                             <ul class="list margin-tb-30">
                                 <li>Created IoT device along with companion app to display the number of people in specific locations on campus</li>
                                 <li>Determined the occupancy of areas using ‘Android Nearby’ to discover number of wireless devices within range</li>
@@ -397,7 +420,7 @@
 						<div class="project margin-b-50">
                             <a href="https://www.youtube.com/watch?v=cB54IVEBsJM&feature=youtu.be" target="_blank">
                                 <h4><b>SMART GLOVE</b></h4>
-                                <h5 class="font-yellow"><b>IEEE HARDWARE HACKATHON (3RD PLACE WINNER)</b></h5>
+                                <h5 class="font-yellow"><b>IEEE HARDWARE HACKATHON &nbsp;|&nbsp; 3RD PLACE WINNER</b></h5>
                             </a>
 							<h6 class="margin-t-10">Arduino, C, Gyro/Accselerometer (Feb 2017)</h6>
                             <ul class="list margin-tb-30">
@@ -410,7 +433,7 @@
                         <div class="project margin-b-50">
                             <h4><b>DOG WHEELCHAIR LIFT</b></h4>
                             <h5 class="font-yellow"><b>ROBOTICS PROJECT</b></h5>
-                            <h6 class="margin-t-10">C++, RobotC, AutoCAD (Oct - Dec 2016)</h6>
+                            <h6 class="margin-t-10">C++, RobotC, AutoCAD &nbsp;|&nbsp; Oct - Dec 2016</h6>
                             <ul class="list margin-tb-30">
                                 <li>Constructed wheelchair lift to allow handicapped dogs to scale obstacles with heights up to 20cm</li>
                                 <li>Implemented automatic deployment/stoppage of lift sequences by detecting obstacles using gyroscope and ultrasonic sensors</li>
