--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
                                 <i class="fab fa-facebook"></i></a>
                             </li>
 						</ul>
-						<a class="btn btn-border-purple" href="http://nayefahmed.com/resume.pdf" target="_blank">Download Resume</a>
+						<!-- <a class="btn btn-border-purple" href="http://nayefahmed.com/resume.pdf" target="_blank">Download Resume</a> -->
 					</div><!-- intro -->
 				</div><!-- col-sm-8 -->
 			</div><!-- row -->
@@ -327,7 +327,8 @@
                             </a>
 							<h6 class="margin-t-10">C#, Go, Redis, Azure &nbsp;|&nbsp; Redmond, WA &nbsp;|&nbsp;  Aug 2018 - Present</h6>
 							<ul class="list margin-tb-30">
-								<li>Currently working on the Azure DevOps team to add caching and improve ownership enforcement features within Visual Studio Team Services</li>
+								<li>Worked within Azure DevOps team to create an Ownership Enforcer (OE) service that enforces PR code reviews for compliance and security assurance</li>
+								<li>Improved performance of OE service by reducing VSTS API calls by 70% using sideways lookup to Redis Cache</li>
 							</ul>
 						</div><!-- experience -->
 
