--- a/index.html
+++ b/index.html
@@ -325,7 +325,7 @@
                                 <h4><b>SOFTWARE ENGINEER INTERN</b></h4>
                                 <h5 class="font-yellow"><b>MICROSOFT CORPORATION</b></h5>
                             </a>
-							<h6 class="margin-t-10">C#, Go, Redis, Azure &nbsp;|&nbsp; Redmond, WA &nbsp;|&nbsp;  Aug 2018 - Present</h6>
+							<h6 class="margin-t-10">C#, Go, Redis, Azure &nbsp;|&nbsp; Redmond, WA &nbsp;|&nbsp;  Aug 2018 - Dec 2018</h6>
 							<ul class="list margin-tb-30">
 								<li>Worked within Azure DevOps team to create an Ownership Enforcer (OE) service that enforces PR code reviews for compliance and security assurance</li>
 								<li>Improved performance of OE service by reducing VSTS API calls by 70% using sideways lookup to Redis Cache</li>
