Changed wallpapaer and updated work headline

--- a/index.html
+++ b/index.html
@@ -80,11 +80,20 @@
                                     University of Waterloo
                                 </a>
                             </li>
-                            <li><b>CO-OP : </b>Software Engineer Intern @
+                            <li><b>Experience : </b>Software Engineer Intern @
+                                <a href="https://code.fb.com/category/ml-applications/" target="_blank">
+                                    Facebook
+								</a>
+								 and @ 
+								 <a href="https://www.microsoft.com/" target="_blank">
+                                    Microsoft
+                                </a>
+							</li>
+							<!-- <li><b>Past : </b>Former Software Engineer Intern @
                                 <a href="https://www.microsoft.com/" target="_blank">
                                     Microsoft
                                 </a>
-                            </li>
+                            </li> -->
                             <li><b>EMAIL : </b>
                                 <a href="mailto:nayef.ahmed211@gmail.com">
                                     nayef.ahmed211@gmail.com
@@ -125,7 +134,7 @@
 						team player with an aptitude for <strong>technology</strong>, an intuition
 						for solving <strong>challenging problems</strong>, and a strong track record in
 						people <strong>leadership</strong>. I am currently looking for a 4 month co-op
-						during Summer 2019 so feel free to reach out to me if you want me on your team!</p>
+						during Winter 2020 so feel free to reach out to me if you want me on your team!</p>
 
 					<!--<div class="row">-->
 						<!--<div class="col-sm-6 col-md-6 col-lg-3">-->
